--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,4 +6,4 @@ orbs:
 workflows:
   maven_test:
     jobs:
-      - mvn clean compile package
+      - maven/test # checkout, build, test, and upload test results
