Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,3 +22,23 @@ steps:
     goals: 'package'
 - script: 
     cat README
+    cat README
+    cat README
+    cat README
+    cat README
+    cat README
+    cat README
+    cat README
+    cat README
+    cat README
+    cat README
+    cat README
+    cat README
+    cat README
+    cat README
+    cat README
+    cat README
+    cat README
+    cat README
+    cat README
+    cat README
